Work on swaggar and api for stations component verbs.  Setup logging from the blueprint to the flask app logger
